---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: ????
  Features:
    - Major revisions to all color masks for all entities, items, and icons
    - Perceived brightness and contrast have been improved and oversaturation and color blowouts have been reduced
  Changes:
    - Revised tints to support new mask and highlights process; purple is now less pink
    - Setting "Color intensity" with options "Vibrant" and "Soft", which controlled the blending mode for the highlights layer, has been removed; current blending mode is equivalent to "Vibrant"
---------------------------------------------------------------------------------------------------
Version: 1.1.7
Date: 2021-07-01
  Features:
    - Added function `return_technology_effect_icon`, which returns an IconData layer containing technology constant icons of the specified type at the specified scale and default positioning
  Changes:
    - Updated logistics technologies to latest sprites from base Factorio
    - Revised tier 5 default color, reducing the brightness and saturation slightly to improve color mask results across a variety of entities
    - Dropped support for ShinyBobGFX, ShinyAngelGFX
---------------------------------------------------------------------------------------------------
Version: 1.1.6
Date: 2021-05-02
  Features:
    - Added function `create_icon_variations`
  Changes:
    - Removed function `ore_icon_variations`
    - Adjusted function `construct_icon` and `construct_technology_icon` to allow direct specification of base layer for multi-layer icons
---------------------------------------------------------------------------------------------------
Version: 1.1.5
Date: 2021-03-22
  Bugfixes:
    - Fixed that nuclear reactor working lights were not properly overridden
---------------------------------------------------------------------------------------------------
Version: 1.1.4
Date: 2021-03-13
  Locale: