@@ -27,9 +27,8 @@ reskins-lib-display-notifications=Display notifications
 
 [mod-setting-description]
 reskins-lib-icon-tier-labeling=Displays colored bars to indicate tier on icons.
-reskins-lib-icon-tier-labeling-style=Sets the style of tier label.\n\n[color=#9cdcfe]Default: [img=reskins-lib-rounded-rectangle-tier-label]Rounded Rectangles[/color]
-reskins-lib-tier-mapping=Sets how tiers are mapped for structures and items.\n\n[font=default-semibold]Traditional[/font]: tier mapping follows the names. Entries 1, 2, and 3 in a series maps to tiers 1, 2, and 3, and so on.\nFor example, nuclear reactors starting at tier 1.\n\n[font=default-semibold]Progression[/font]: tier mapping follows game progression. Items obtained later, requiring more complex materials, start mapped to higher tiers.\nFor example, nuclear reactors starting at tier 3.\n\n[color=#9cdcfe]Default: Progression[/color]
-reskins-lib-blend-mode=[color=#9cdcfe]Default: Vibrant[/color]
+reskins-lib-icon-tier-labeling-style=Sets the style of tier label.
+reskins-lib-tier-mapping=Sets how tiers are mapped for structures and items.\n\n[font=default-semibold]Traditional[/font]: tier mapping follows the names. Entries 1, 2, and 3 in a series maps to tiers 1, 2, and 3, and so on.\nFor example, nuclear reactors starting at tier 1.\n\n[font=default-semibold]Progression[/font]: tier mapping follows game progression. Items obtained later, requiring more complex materials, start mapped to higher tiers.\nFor example, nuclear reactors starting at tier 3.
 reskins-lib-customize-tier-colors=[img=utility.warning_icon] Custom colors makes extensive use of sprite layers for items and entities, dramatically increasing the number of sprites on-screen. This may have negative performance impacts.\n\nEnable customization of tier colors through hexidecimal color values. Supports hex codes in the following form: 'rrggbb', 'rgb', 'rrggbbaa', 'rgba', 'ww', and 'w'.
 reskins-lib-custom-colors-tier-0=Sets color for Tier 0.
 reskins-lib-custom-colors-tier-1=Sets color for Tier 1.
@@ -76,13 +75,13 @@ reskins-notify-missing-multiple=__1__ and __2__ __plural_for_parameter_2_{1=othe
 true=\n\n[color=#9cdcfe]Default:[/color] [color=green]Enabled[/color]
 false=\n\n[color=#9cdcfe]Default:[/color] [color=red]Disabled[/color]
 default=\n\n[color=#9cdcfe]Default:[/color]
-tier-0-color=[color=#666666][font=default-bold]666666[/font][/color]
-tier-1-color=[color=#ffbe26][font=default-bold]ffbe26[/font][/color]
-tier-2-color=[color=#ff2d1a][font=default-bold]ff2d1a[/font][/color]
-tier-3-color=[color=#00b2ff][font=default-bold]00b2ff[/font][/color]
+tier-0-color=[color=#808080][font=default-bold]808080[/font][/color]
+tier-1-color=[color=#ffb726][font=default-bold]ffb726[/font][/color]
+tier-2-color=[color=#ff0800][font=default-bold]ff0800[/font][/color]
+tier-3-color=[color=#33b4ff][font=default-bold]33b4ff[/font][/color]
 tier-4-color=[color=#b459ff][font=default-bold]b459ff[/font][/color]
 tier-5-color=[color=#2ee55c][font=default-bold]2ee55c[/font][/color]
-tier-6-color=[color=#ff7700][font=default-bold]ff7700[/font][/color]
+tier-6-color=[color=#ff8533][font=default-bold]ff8533[/font][/color]
 
 [reskins-supported-mods]
 angelsbioprocessing=Angel's Bioprocessing
@@ -120,8 +119,10 @@ classic-mining-drill=Classic Mining Drill
 Clowns-Processing=MadClown01's Processing
 deadlock-beltboxes-loaders=Deadlock's Stacking Beltboxes & Compact Loaders
 DeadlockCrating=Deadlock's Crating Machine
+extendedangels=Extended Angels
 LoaderRedux=Loader Redux
 mini-machines=Mini Machines Mod
 miniloader=Miniloader
+RealisticReactorGlow=Realistic Reactor Glow
 semi-classic-mining-drill=Semi-Classic Mining Drill
 vanilla-loaders-hd=Vanilla Loaders
