@@ -1,0 +1,7 @@
+-- Copyright (c) 2021 Kirazy
+-- Part of Artisanal Reskins: Bob's Mods
+--
+-- See LICENSE.md in the project directory for license information.
+
+-- Leaving this as a soft-removal so that savvy users may enable the setting if they choose
+reskins.lib.setting_override("string-setting", "reskins-lib-blend-mode", "additive")
